# nest-engine-master

./: CMakeLists.txt  README.md
include/: camera.hpp  component.hpp  ecs.hpp  entity.hpp  game.hpp  matrix.hpp  mesh.hpp  mesh_loader.hpp  render.hpp  shader.hpp  world.hpp
scripts/: build.sh  run.sh
shaders/: uniform.frag  uniform.vert
src/: main.cpp
src/core/: game.cpp  mesh.cpp  render.cpp  shader.cpp  world.cpp
